[tool.poetry]
name = "data-gen"
version = "0.1.0"
description = ""
authors = ["aigoncharov <andrey@goncharov.page>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.47.0"
convokit = "^3.0.1"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
